# hexagon-npu-inference-engine

./: .gitignore  CMakeLists.txt  README.md  project_overview.md
include/: QnnManager.hpp
scripts/: compare_npu_cpu_performance.py  extract_generator_weights.py  extract_weights.py  train_generator.py  train_model.py  train_vae.py
src/: QnnManager.cpp  main.cpp
